# dev-container

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.user.example  Makefile  README.md  attach-to-container.sh  build-containers.sh  docker-compose.yaml  pyproject.toml  start-container.sh
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: deploy-dev-image.yml  quality.yaml  update.yaml
dev/: Dockerfile
docker/: Dockerfile
run/: Dockerfile
