[tool.poetry]
name = "dev-container"
version = "0.1.0"
description = ""
authors = ["Jonathan Gopel <jgopel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
