[project]
name = "dev-container"
version = "0.1.0"
description = ""
authors = [
  {name = "Jonathan Gopel", email = "jgopel@gmail.com"},
]
readme = "README.md"
requires-python = "^3.12"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
